--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -71,7 +71,7 @@
 <p>N&aacute;sleduj&iacute;c&iacute; pracovn&iacute; plochy ji&#382; nejsou po verzi 0.21 zahrnuty:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Start.svg&amp;filetimestamp=20200404174126&amp;.html" class="mw-file-description"><img src="../File/Workbench_Start.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Start_Workbench.html" title="Start Workbench">Pracovn&iacute; plocha Start</a> v&aacute;m umo&#382;&#328;uje rychle p&#345;ej&iacute;t na jeden z nej&#269;ast&#283;ji pou&#382;&iacute;van&yacute;ch pracovn&iacute;ch ploch. Tato pracovn&iacute; plocha byla nahrazena &uacute;vodn&iacute; str&aacute;nkou, na kterou se dostanete p&#345;es <a href="../Std_Help_Menu.html" title="Std Help Menu">menu N&aacute;pov&#283;da</a>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Web.svg&amp;filetimestamp=20200404174327&amp;.html" class="mw-file-description"><img src="../File/Workbench_Web.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Web_Workbench.html" title="Web Workbench">Web Workbench</a> provides you with a browser window instead of the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a> within FreeCAD.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Web.svg&amp;filetimestamp=20200404174327&amp;.html" class="mw-file-description"><img src="../File/Workbench_Web.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Web_Workbench.html" title="Web Workbench">Pracovn&iacute; plocha Web</a> v&aacute;m poskytuje okno prohl&iacute;&#382;e&#269;e nam&iacute;sto <a href="../3D_view.html" class="mw-redirect" title="3D view">3D zobrazen&iacute;</a> v r&aacute;mci FreeCADu.</li></ul>
 <p>The following workbenches are no longer included after version 0.20:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Drawing.svg&amp;filetimestamp=20200404172745&amp;.html" class="mw-file-description"><img src="../File/Workbench_Drawing.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Drawing_Workbench.html" title="Drawing Workbench">Drawing Workbench</a> was used for producing technical drawings. The <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">TechDraw Workbench</a> is its more advanced replacement.</li></ul>
@@ -104,12 +104,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118083842
+Cached time: 20260118083934
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.145 seconds
-Real time usage: 0.249 seconds
+CPU time usage: 0.153 seconds
+Real time usage: 0.275 seconds
 Preprocessor visited node count: 286/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -120,18 +120,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.945      1 -total
- 40.27%   10.852      1 Template:Userdocnavi/cs
- 13.54%    3.647      1 Template:Navigation_menu_2
- 11.70%    3.152      2 Template:Docnav
- 11.62%    3.132      1 Template:MenuCommand
-  7.82%    2.108      3 Template:Version
-  7.54%    2.032      2 Template:VersionMinus
-  6.44%    1.735      1 Template:Button
-  6.27%    1.690      5 Template:Incode
+100.00%   19.063      1 -total
+ 36.61%    6.979      1 Template:Userdocnavi/cs
+ 15.66%    2.985      1 Template:Navigation_menu_2
+ 15.20%    2.898      2 Template:Docnav
+  9.54%    1.818      1 Template:MenuCommand
+  8.86%    1.689      5 Template:Incode
+  8.01%    1.527      1 Template:Button
+  7.73%    1.474      2 Template:VersionMinus
+  7.66%    1.461      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083842 and revision id 1739906. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083933 and revision id 1739908. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
