--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -75,7 +75,7 @@
 <p>N&aacute;sleduj&iacute;c&iacute; pracovn&iacute; plochy ji&#382; nejsou po verzi 0.20 zahrnuty:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Drawing.svg&amp;filetimestamp=20200404172745&amp;.html" class="mw-file-description"><img src="../File/Workbench_Drawing.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Drawing_Workbench.html" title="Drawing Workbench">Pracovn&iacute; plocha Drawing</a> se pou&#382;&iacute;vala k vytv&aacute;&#345;en&iacute; technick&yacute;ch v&yacute;kres&#367;. <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDraw</a> je jej&iacute; pokro&#269;ilej&scaron;&iacute; n&aacute;hradou.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Image.svg&amp;filetimestamp=20200404172907&amp;.html" class="mw-file-description"><img src="../File/Workbench_Image.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Image_Workbench.html" title="Image Workbench">Image Workbench</a> was used for working with bitmap images. Its functionality has been integrated in <a href="../Std_Base.html" title="Std Base">Std Base</a>. See <a href="../Std_Import.html" title="Std Import">Std Import</a> and <a href="../Std_ViewLoadImage.html" title="Std ViewLoadImage">Std ViewLoadImage</a>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Image.svg&amp;filetimestamp=20200404172907&amp;.html" class="mw-file-description"><img src="../File/Workbench_Image.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Image_Workbench.html" title="Image Workbench">Pracovn&iacute; plocha Image</a> se pou&#382;&iacute;vala pro pr&aacute;ci s bitmapov&yacute;mi obr&aacute;zky. Jej&iacute; funkce byly integrov&aacute;ny do <a href="../Std_Base.html" title="Std Base">Std Base</a>. Viz <a href="../Std_Import.html" title="Std Import">Std Import</a> a <a href="../Std_ViewLoadImage.html" title="Std ViewLoadImage">Std ViewLoadImage</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Raytracing.svg&amp;filetimestamp=20200404173709&amp;.html" class="mw-file-description"><img src="../File/Workbench_Raytracing.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Raytracing_Workbench.html" title="Raytracing Workbench">Raytracing Workbench</a> was used for ray-tracing (rendering). The external <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-render">Render Workbench</a> should be used instead.</li></ul>
 <h2><span class="mw-headline" id="External_workbenches">External workbenches</span></h2>
 <p>FreeCAD workbenches are easy to program in <a href="../Python.html" title="Python">Python</a>, there are therefore many people developing additional workbenches outside of the FreeCAD main development area.
@@ -104,12 +104,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118084125
+Cached time: 20260118084246
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.148 seconds
-Real time usage: 0.243 seconds
+CPU time usage: 0.123 seconds
+Real time usage: 0.215 seconds
 Preprocessor visited node count: 286/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -120,18 +120,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.934      1 -total
- 36.19%    7.577      1 Template:Userdocnavi/cs
- 13.04%    2.729      1 Template:Navigation_menu_2
- 11.36%    2.379      2 Template:Docnav
- 10.89%    2.279      1 Template:MenuCommand
- 10.60%    2.218      1 Template:Button
-  9.88%    2.068      2 Template:VersionMinus
-  8.77%    1.836      5 Template:Incode
-  7.12%    1.490      3 Template:Version
+100.00%   17.305      1 -total
+ 41.53%    7.186      1 Template:Userdocnavi/cs
+ 20.44%    3.537      1 Template:Navigation_menu_2
+ 13.37%    2.313      2 Template:Docnav
+  9.49%    1.642      1 Template:MenuCommand
+  8.54%    1.478      5 Template:Incode
+  7.69%    1.330      3 Template:Version
+  7.49%    1.297      1 Template:Button
+  6.99%    1.210      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118084125 and revision id 1739912. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118084246 and revision id 1739914. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
