--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -80,7 +80,7 @@
 <p><span id="External_workbenches"></span>
 </p>
 <h3><span id="Extern.C3.AD_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_plochy">Extern&iacute; pracovn&iacute; plochy</span></h3>
-<p>FreeCAD workbenches are easy to program in <a href="../Python.html" title="Python">Python</a>, there are therefore many people developing additional workbenches outside of the FreeCAD main development area.
+<p>Pracovn&iacute; plochy FreeCADu se snadno programuj&iacute; v jazyce <a href="../Python.html" title="Python">Python</a>, proto mnoho lid&iacute; vyv&iacute;j&iacute; dal&scaron;&iacute; pracovn&iacute; plochy mimo hlavn&iacute; v&yacute;vojovou oblast FreeCADu.
 </p><p>The <a href="../External_workbenches.html" title="External workbenches">external workbenches</a> page lists all that are known to this community. Most are easily installable from within FreeCAD, using the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>, found under menu <b>Tools &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_AddonMgr.svg&amp;filetimestamp=20240704212012&amp;.html" class="mw-file-description"><img src="../File/Std_AddonMgr.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Addon manager</b>. 
 </p><p><br>
 </p>
@@ -106,12 +106,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118084423
+Cached time: 20260118084507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.139 seconds
-Real time usage: 0.223 seconds
+CPU time usage: 0.119 seconds
+Real time usage: 0.176 seconds
 Preprocessor visited node count: 287/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -122,18 +122,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.650      1 -total
- 32.91%    8.113      1 Template:Userdocnavi/cs
- 14.17%    3.493      2 Template:Docnav
- 13.25%    3.267      1 Template:Navigation_menu_2
- 12.65%    3.119      3 Template:Version
-  9.84%    2.425      1 Template:Button
-  9.77%    2.409      5 Template:Incode
-  7.66%    1.888      2 Template:VersionMinus
-  7.48%    1.844      1 Template:MenuCommand
+100.00%   12.290      1 -total
+ 34.69%    4.263      1 Template:Userdocnavi/cs
+ 16.72%    2.055      1 Template:Navigation_menu_2
+ 16.09%    1.978      2 Template:Docnav
+ 10.24%    1.258      5 Template:Incode
+  9.43%    1.159      3 Template:Version
+  8.41%    1.033      1 Template:MenuCommand
+  7.55%    0.928      2 Template:VersionMinus
+  7.25%    0.891      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118084422 and revision id 1739918. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118084506 and revision id 1739920. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
