--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -83,7 +83,7 @@
 <p>Pracovn&iacute; plochy FreeCADu se snadno programuj&iacute; v jazyce <a href="../Python.html" title="Python">Python</a>, proto mnoho lid&iacute; vyv&iacute;j&iacute; dal&scaron;&iacute; pracovn&iacute; plochy mimo hlavn&iacute; v&yacute;vojovou oblast FreeCADu.
 </p>
 <div class="mw-translate-fuzzy">
-<p>Str&aacute;nka <a href="../External_workbenches.html" title="External workbenches">extern&iacute; pracovn&iacute; plochy</a> obsahuje seznam v&scaron;ech, kter&eacute; jsou t&eacute;to komunit&#283; zn&aacute;my. V&#283;t&scaron;inu z nich lze snadno nainstalovat p&#345;&iacute;mo z FreeCADu pomoc&iacute; [[Std_AddonMgr|Sp&aacute;vce dopl&#328;k&#367;], kter&eacute;ho najdete v menu <b>N&aacute;stroje &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_AddonMgr.svg&amp;filetimestamp=20240704212012&amp;.html" class="mw-file-description"><img src="../File/Std_AddonMgr.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Spr&aacute;vce dopl&#328;k&#367;</b>.
+<p>Str&aacute;nka <a href="../External_workbenches.html" title="External workbenches">Extern&iacute; pracovn&iacute; plochy</a> obsahuje seznam v&scaron;ech, kter&eacute; jsou t&eacute;to komunit&#283; zn&aacute;my. V&#283;t&scaron;inu z nich lze snadno nainstalovat p&#345;&iacute;mo z FreeCADu pomoc&iacute; [[Std_AddonMgr|Sp&aacute;vce dopl&#328;k&#367;], kter&eacute;ho najdete v menu <b>N&aacute;stroje &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_AddonMgr.svg&amp;filetimestamp=20240704212012&amp;.html" class="mw-file-description"><img src="../File/Std_AddonMgr.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Spr&aacute;vce dopl&#328;k&#367;</b>.
 </p>
 </div> 
 <p><br>
@@ -110,12 +110,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118084734
+Cached time: 20260118084926
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.126 seconds
-Real time usage: 0.246 seconds
+CPU time usage: 0.121 seconds
+Real time usage: 0.175 seconds
 Preprocessor visited node count: 288/1000000
 Post&#8208;expand include size: 8008/2097152 bytes
 Template argument size: 2376/2097152 bytes
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.525      1 -total
- 33.69%    6.916      1 Template:Userdocnavi/cs
- 16.69%    3.426      3 Template:Version
- 12.94%    2.655      1 Template:Navigation_menu_2
- 11.60%    2.380      2 Template:Docnav
- 11.44%    2.349      2 Template:VersionMinus
-  9.14%    1.877      5 Template:Incode
-  6.29%    1.292      1 Template:Button
-  6.18%    1.268      1 Template:MenuCommand
+100.00%   13.920      1 -total
+ 35.52%    4.945      1 Template:Userdocnavi/cs
+ 16.17%    2.251      1 Template:Navigation_menu_2
+ 15.49%    2.156      2 Template:Docnav
+  9.26%    1.289      1 Template:MenuCommand
+  8.76%    1.219      5 Template:Incode
+  8.65%    1.204      3 Template:Version
+  8.16%    1.136      1 Template:Button
+  7.96%    1.108      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118084734 and revision id 1739922. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118084926 and revision id 1739924. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
