--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -139,9 +139,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.4A.svg&amp;filetimestamp=20240220204211&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.4A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.4A</b> UNC-Schlitzschraube mit ovalem Senkkopf.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.9A.svg&amp;filetimestamp=20240220204234&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.9A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.9A</b> UNC-Flachkopfschraube mit Schlitz.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.10A.svg&amp;filetimestamp=20240220204053&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.10A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.10A</b> UNC-Schlitzschraube mit Senkkopf.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.12A.svg&amp;filetimestamp=20240220204118&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.12A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.12A</b> UNC Slotted truss head screws.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.12A.svg&amp;filetimestamp=20240220204118&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.12A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.12A</b> UNC-Schlitzkopfschrauben.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.16A.svg&amp;filetimestamp=20240220204140&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.16A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.16A</b> UNC Slotted round head screw.</li></ul>
 </div>
@@ -425,13 +423,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085029
+Cached time: 20260118085040
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.467 seconds
-Real time usage: 0.741 seconds
-Preprocessor visited node count: 704/1000000
+CPU time usage: 0.547 seconds
+Real time usage: 0.890 seconds
+Preprocessor visited node count: 703/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -441,19 +439,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.820      1 -total
- 28.38%   10.165      7 Template:PropertyData/de
- 26.44%    9.471      1 Template:Fasteners_Tools_navi/de
- 12.78%    4.579      1 Template:Button
-  9.79%    3.507      7 Template:Variable
-  9.45%    3.384      1 Template:VersionPlus/de
-  6.04%    2.163      1 Template:TRUE
-  5.92%    2.119      1 Template:Navigation_menu_2
-  4.28%    1.532      1 Template:TOCright
-  3.73%    1.337      7 Template:MenuCommand
+100.00%   45.285      1 -total
+ 46.29%   20.961      1 Template:Fasteners_Tools_navi/de
+ 21.95%    9.942      7 Template:PropertyData/de
+ 10.18%    4.608      1 Template:VersionPlus/de
+  8.79%    3.981      7 Template:Variable
+  7.63%    3.457      1 Template:Navigation_menu_2
+  5.29%    2.395      1 Template:TRUE
+  4.39%    1.988      1 Template:Button
+  2.69%    1.219      1 Template:TOCright
+  2.57%    1.165      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085028 and revision id 1739928. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085039 and revision id 1739930. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
